Fix fancybox z-index issue

--- a/modules/admin/public/assets/less/core.less
+++ b/modules/admin/public/assets/less/core.less
@@ -160,7 +160,8 @@ body.sorting {
 	z-index: 11000 !important;
 }
 
-#fancybox-loading {
+#fancybox-loading,
+.fancybox-wrap {
 	z-index: 11001 !important;
 }
 
